source/logs/78421.simulator_kani.log
cpu-bind=MASK - nlpgpu08, task  0  0 [23721]: mask 0xff000000ff set
cpu-bind=MASK - nlpgpu08, task  0  0 [23735]: mask 0xff000000ff set
  File "/mnt/nlpgridio3/data/aceAttorney/source/llama_simulator_closedLLM.py", line 85
    Add an error message to prompt the model to give a valid response
        ^^
SyntaxError: invalid syntax
srun: error: nlpgpu08: task 0: Exited with exit code 1
